gallery gap fix with margin

--- a/3_week/06-22/bootstrapPage/css/projects.css
+++ b/3_week/06-22/bootstrapPage/css/projects.css
@@ -10,6 +10,16 @@
   background-color: black;
 }
 
+.projects .col {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.col > img {
+  object-fit: cover;
+  width: 100%;
+}
+
 /* No greater than 992px, no less than 576px */
 @media only screen and (max-width: 991px) and (min-width: 576px) {
   .projects .col:nth-child(odd) {
@@ -21,22 +31,9 @@
   }
 }
 @media only screen and (min-width: 992px) {
-  .projects .col:first-child,
-  .projects .col:nth-child(5) {
-    padding-right: 8px;
-  }
-
-  .projects .col:nth-child(4),
-  .projects .col:nth-child(8) {
-    padding-left: 8px;
-  }
-
-  .projects .col:nth-child(2),
-  .projects .col:nth-child(3),
-  .projects .col:nth-child(6),
-  .projects .col:nth-child(7) {
-    padding-right: 8px;
-    padding-left: 8px;
+  .projects .col {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
   }
 }
 
